# ezBotV2

./: .gitignore  OdomConfig.rviz  imageViewerConfig.rviz  readme.md
.github/workflows/: build_test.yaml
docker/: build-all.sh  dockerfile-post-rosdep  dockerfile-pre-rosdep  run.sh
ezbot-v2-simulation/config/: gui.config.xml
ezbot-v2-simulation/models/Plants/: model.config  model.sdf
ezbot-v2-simulation/models/SolarPanel/: model.sdf
ezbot-v2-simulation/models/Table2024/: table2024.dae
ezbot-v2/description/roller/: roller.transmission.xacro
ezbot-v2/models/aruco_tags/: aruco_tag_2.dae
ezbot-v2/models/ezbotv2/: model.sdf
robot/: CMakeLists.txt  readme.md
robot/config/: gazebo_controller.yaml  omnidirectional_controller.yaml
robot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
robot/description/omni_wheel/: omni_wheel.transmission.xacro  omni_wheel.urdf.xacro
robot/description/roller/: roller.gazebo.xacro  roller.urdf.xacro
robot/launch/: robot.launch.py  rsp.launch.py
robot/models/aruco_tags/: aruco_tag_1.dae
robot/models/ezbotv2/: ezbotv2.stl
simulation/: CMakeLists.txt  package.xml
simulation/launch/: multirobot-simulation.launch.py  simulation.launch.py
simulation/models/Plants/: plant.blend  plant_white.dae
simulation/models/Table2024/: model.sdf
simulation/worlds/: table2024.world  table2024Poteaux.world  table_with_everything.world  table_with_panneaux.world
src/aruco_recognition/: package.xml  setup.cfg  setup.py
src/aruco_recognition/aruco_recognition/: feature_matching.py  image_subscriber.py
src/ezbot-v2/: CMakeLists.txt  package.xml
src/ezbot-v2-simulation/: CMakeLists.txt  package.xml
src/ezbot-v2-simulation/config/: gui.config.xml  gz_bridge.yaml  gz_sim_new.config
src/ezbot-v2-simulation/launch/: multirobot-simulation.launch.py  simulation.launch.py  simulation_nav2.launch.py  simulation_remote_calc.launch.py
src/ezbot-v2-simulation/models/Can/: CanTexture.xcf  can.blend  can.blend1  can.dae  canv2.dae  model.config  model.sdf
src/ezbot-v2-simulation/models/Plank/: model.config  model.sdf
src/ezbot-v2-simulation/models/SolarPanel/: solarPanelTextured.dae
src/ezbot-v2-simulation/models/Table2024/: model.sdf
src/ezbot-v2-simulation/models/Table2025/: Table2025.blend  Table2025.blend1  TableMainV1.dae  TableMainV2.dae  TableMainV3.dae  model.config  model.sdf
src/ezbot-v2-simulation/models/boxboxbox/: model.config  model.sdf
src/ezbot-v2-simulation/models/poteau/: model.config  model.sdf
src/ezbot-v2-simulation/worlds/: Table_2025_poteaux.sdf  Table_2025_with_cans.sdf  Table_2025_with_cans_planks.sdf  table2025.world  table_with_everything.world
src/ezbot-v2/config/: localization.yaml  nav2_params.yaml  omnidirectional_controller.yaml
src/ezbot-v2/description/: camera.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
src/ezbot-v2/description/omni_wheel/: omni_wheel.urdf.xacro
src/ezbot-v2/description/roller/: roller.gazebo.xacro  roller.urdf.xacro
src/ezbot-v2/launch/: nav2.bringup.launch.py  navigation.launch.py  rsp.launch.py
src/ezbot-v2/maps/: BaseMap.xcf
src/ezbot-v2/maps/mapWithPedestal/: mapWithPedestal.yaml
src/ezbot-v2/maps/testMap/: testMap.yaml
src/ezbot-v2/models/aruco_tags/: aruco_tag.blend  aruco_tag.blend1  aruco_tag_6.dae  aruco_tag_7.dae
src/ezbot-v2/models/ezbotv2/: ezbotv2.dae  model.config
src/ezbot_propulsion_gazebo_plugin/: CMakeLists.txt  package.xml
src/ezbot_propulsion_gazebo_plugin/include/: ezbot_propulsion_gazebo_plugin.hpp  ezbot_propulsion_gazebo_plugin_private.hpp
src/ezbot_propulsion_gazebo_plugin/src/: ezbot_propulsion_gazebo_plugin.cpp
src/gz-match-plugin/: CMakeLists.txt  design.wsd  package.xml  readme.md
src/gz-match-plugin/include/gz_match_plugin/: action_zones.hpp  game_action.hpp  gz_match_plugin.hpp  team.hpp
src/gz-match-plugin/src/: action_zones.cpp  game_action.cpp  gz_match_plugin.cpp
src/ldrobot-lidar-ros2/ldlidar_component/: CMakeLists.txt
src/ldrobot-lidar-ros2/ldlidar_node/: CMakeLists.txt
src/obstacle_detector_ros2/obstacle_detector/: CMakeLists.txt  package.xml
src/obstacle_detector_ros2/obstacle_detector/include/obstacle_detector/: obstacle_extractor.h  obstacle_publisher.h  obstacle_tracker.h  position_estimator.h  scans_merger.h
src/obstacle_detector_ros2/obstacle_detector/include/obstacle_detector/utilities/: circle.h  math_utilities.h  segment.h  tracked_obstacle.h
src/obstacle_detector_ros2/obstacle_detector/launch/: demo.launch.py  demo_simple.launch.py
src/obstacle_detector_ros2/obstacle_detector/src/: obstacle_extractor.cpp  obstacle_publisher.cpp  obstacle_tracker.cpp  position_estimator.cpp  scans_merger.cpp
src/obstacle_detector_ros2/obstacle_msgs/: CMakeLists.txt  package.xml
src/obstacle_detector_ros2/viewer/: viewr_cv2_500x500.py
src/omnidirectional_controllers/: CMakeLists.txt  omnidirectional_plugin.xml
src/omnidirectional_controllers/include/omnidirectional_controllers/: kinematics.hpp  omnidirectional_controller3.hpp
src/omnidirectional_controllers/src/: kinematics.cpp  omnidirectional_controller3.cpp
src/omnidirectional_controllers/test/: test_kinematics.cpp  test_odometry.cpp
src/omnidrive3_rppico/: package.xml
src/omnidrive3_rppico/hardware/: omnibot_pico_system.cpp
src/omnidrive3_rppico/hardware/include/omnidrive3_rppico/: rppico_comms.hpp
src/omnidrive_rppico/: CMakeLists.txt  omnidrive3_rppico.xml
src/omnidrive_rppico/hardware/include/omnidrive3_rppico/: omnibot_system.hpp  rppico_comms.hpp  visibility_control.h
src/remote-calc/: CMakeLists.txt  package.xml  readme.md  setup.py
src/remote-calc/description/: remote_calc.urdf.xacro  single_camera.xacro
src/remote-calc/launch/: remote_calc.launch.py  rsp.launch.py
src/remote-calc/remote_calc/: aruco_serial_tf_broadcaster.py
src/ros_qwiik_icm_20948/: CMakeLists.txt
