<?xml version="1.0"?>
<package>
  <name>gz-match-plugin</name>
  <version>0.0.1</version>
  <description>
    A Gazebo plugin to count the score of a Coupe de France de Robotique match.
  </description>
  <maintainer email="vincent.belpois@gmail.com">Vincent Belpois</maintainer>
  <license>GNU GPL v3</license>

  <url type="website">https://github.com/VincidaB/ezBotV2</url>
  <url type="repository">https://github.com/VincidaB/ezBotV2</url>
  <author>Vincent Belpois</author>
  <author email="vincent.belpois@gmail.com">Vincent Belpois</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
	
	<export>
			<build_type>ament_cmake</build_type>
	</export>

</package>