<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detector</name>
  <version>1.0.0</version>
  <description>Detect obstacles in form of line segments and circles from 2D laser scans.</description>
  <maintainer email="mateusz.przybyla@put.poznan.pl">Mateusz Przybyla</maintainer>
  <author>Mateusz Przybyla</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rviz</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>obstacle_msgs</depend>
  <depend>visualization_msgs</depend>
  <!-- boost -->
  <depend>libboost-dev</depend>
  <depend>libarmadillo-dev</depend>

  <!-- <export>
    <rviz plugin="${prefix}/rviz_plugins.xml"/>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export> -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
